# Internship-Applications-Automation

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  candidate_extractor.py  csv_handler.py  email_client.py  main.py  parser.py  pyproject.toml  requirements.txt  setup.py  utils.py
docs/: OVERVIEW.md  README.md  start.md  task.md
src/internship_scraper/: __init__.py  candidate_extractor.py  cli.py  config_loader.py  core.py  csv_handler.py  email_client.py  imap.py  internship_scraper.py  main.py  parser.py  pyproject.toml  show.sh
src/internship_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/internship_scraper/defaults/: csv_config.yaml  email_config.yaml  rules.yaml
src/internship_scraper/utils/: logger.py  timestamp.py
src/webapp/: __init__.py  app.py  models.py  routes.py  scraper.py  services.py  test_webapp.py
src/webapp/instance/: database.db
src/webapp/static/: scripts.js  styles.css
src/webapp/templates/: candidate_detail.html  dashboard.html  settings.html
