[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internship_scraper"
version = "0.1.0"
description = "Python package to scrape internship applications from email and store in CSV"
authors = [{name = "Amen Ellah Kerimi", email = "mamap4110@gmail.com"}]

dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "imapclient>=2.3.0",
    "PyYAML>=6.0",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.3.0",
    "isort>=6.0.0",
    "flake8>=6.0.0",
    "typing-extensions>=4.8.0"
]

