[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imap_email_scraper"
version = "0.2.0"
description = "General-purpose Python library and CLI for scraping emails and attachments via IMAP. Modular, importable, and robust."
authors = [{name = "Amen Ellah Kerimi", email = "mamap4110@gmail.com"}]

dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.3.0",
    "isort>=6.0.0",
    "flake8>=6.0.0",
    "typing-extensions>=4.8.0"
]

[project.scripts]
email-scraper = "internship_scraper.cli:main"
